syntax = "proto3";

package s3video;

service Videotransporter {
    rpc VideoUpload (stream VideoUpoadRequest) returns (Message) {}
    rpc VideoDownload (VideoDownloadRequest) returns (VideoDownloadReplay) {}
}

message VideoUpoadRequest {
    bytes data = 1;
    string name = 2;
}

message Message {
    string message = 1;
}

message VideoDownloadRequest {
    string name = 1;
    int64 startbytes = 2;
    int64 endbytes = 3;
}

message VideoDownloadReplay {
    bytes data = 1;
}
